# StreamingQt

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  main.cpp
CameraHandle/: CMakeLists.txt  cameraTypeRegistration.h  cameraframeprocessor.cpp  cameraframeprocessor.h  camerapool.cpp  camerapool.h  camerascreencapture.cpp  camerascreencapture.h  camerautils.cpp  camerautils.h
CameraHandle/CameraCaptureService/: CMakeLists.txt  camerascreencapture.cpp  camerascreencapture.h  screencapture.cpp  screencapture.h
CameraHandle/Helpers/: CMakeLists.txt  animationhelper.cpp  animationhelper.h  screencapturehelper.cpp  screencapturehelper.h
CameraStorage/: CMakeLists.txt  cameraStorageTypeRegistration.h  camerastorage.cpp  camerastorage.h  camerastorageservice.cpp  camerastorageservice.h
Core/: CMakeLists.txt
Core/CustomizedQuickItems/: AnchorsItem.cpp  AnchorsItem.h  AnimatedPaintedItem.cpp  AnimatedPaintedItem.h  CMakeLists.txt  RoundedImage.cpp  RoundedImage.h  painteditem.cpp  painteditem.h
Core/FrameProcessing/: FrameSourceBase.h
Core/FrameProcessing/p/: FrameSourceBaseImpl.h
Core/Fudementals/: CMakeLists.txt
Core/Fudementals/Memory/: CMakeLists.txt  HeapAllocationOnly.h  HeapAllocationOnly_unix.cpp  HeapAllocationOnly_win.cpp  InheritantQueriable.h  Trackable.h  TrackableImpl.cpp  TrackableImpl.h  Tracker.h  observerPtr.h
Core/Fudementals/System/: BaseInterface.h  SInterface.h
Core/Fudementals/SystemIF/: BaseInterface.h  CMakeLists.txt  IFManipulate.h  IFRepresent.h  SInterface.cpp  SInterface.h
Core/VideoRecording/: RecordingBase.cpp  RecordingBase.h  VideoRecordingBase.cpp  VideoRecordingBase.h  VideoStorageBase.h  capturesession.cpp  capturesession.h
CustomVideoHandle/: CMakeLists.txt  videoTypeRegistration.h  videoframeprocessor.cpp  videoframeprocessor.h  videosourcepool.cpp  videosourcepool.h
HMI/: CMakeLists.txt  Main.qml  MainCamera.qml
HMI/Assets/: CMakeLists.txt
HMI/Components/: CMakeLists.txt  VideoButtonProsDefault.qml
HMI/Components/Fudamentals/: AbstractButtonWithState.qml  ButtonWithLayer.qml  VideoSettingButton.qml
HMI/Const/: ButtonAttribute.qml  CMakeLists.txt  ComponentEnum.qml  qmldir
Utils/: CMakeLists.txt  DeleteLater.h  executionhelper.cpp  executionhelper.h  singleapplication.cpp  singleapplication.h
assets/: CMakeLists.txt
cmake/: PreCommitConfig.cmake
